<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:screenOrientation="portrait"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/input_url"
        android:text="@string/label_insert_url"/>

    <EditText
        android:id="@+id/input_url"
        android:hint="@string/hint_insert_url"
        android:inputType="textUri"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:labelFor="@+id/input_test_mode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_select_mode"/>

    <Spinner
        android:id="@+id/input_test_mode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:labelFor="@+id/input_test_duration"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_test_duration"/>

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <!-- Hour -->
        <NumberPicker
            android:id="@+id/input_duration_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_separator"/>
        <!-- Minute -->
        <NumberPicker
            android:id="@+id/input_duration_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_separator"/>
        <!-- Second -->
        <NumberPicker
            android:id="@+id/input_duration_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkbox_repeat_test"
        android:text="@string/checkbox_repeat_test"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/repeat_field"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:labelFor="@+id/input_number_test_repetions"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_number_test_repetions"/>

        <EditText
            android:id="@+id/input_number_test_repetions"
            android:inputType="number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:labelFor="@+id/input_delay_between_tests"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_delay_between_tests"/>

        <EditText
            android:id="@+id/input_delay_between_tests"
            android:inputType="number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/button_run"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/execute_test" />
</LinearLayout>
